; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Wpc.c_WpcCallEx.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Wpc.c_WpcCallEx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @WpcCallEx(i8* %0, i32* %1, i32 %2, i32 %3, i8* %4, i32* %5, i32* %6, i32* %7, i8* %8, i32* %9, i32 %10, i8* %11, i8* %12) #0 {
  %14 = alloca i8*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i8*, align 8
  %23 = alloca i32*, align 8
  %24 = alloca i32, align 4
  %25 = alloca i8*, align 8
  %26 = alloca i8*, align 8
  store i8* %0, i8** %14, align 8
  store i32* %1, i32** %15, align 8
  store i32 %2, i32* %16, align 4
  store i32 %3, i32* %17, align 4
  store i8* %4, i8** %18, align 8
  store i32* %5, i32** %19, align 8
  store i32* %6, i32** %20, align 8
  store i32* %7, i32** %21, align 8
  store i8* %8, i8** %22, align 8
  store i32* %9, i32** %23, align 8
  store i32 %10, i32* %24, align 4
  store i8* %11, i8** %25, align 8
  store i8* %12, i8** %26, align 8
  %27 = load i8*, i8** %14, align 8
  %28 = load i32*, i32** %15, align 8
  %29 = load i32, i32* %16, align 4
  %30 = load i32, i32* %17, align 4
  %31 = load i8*, i8** %18, align 8
  %32 = load i32*, i32** %19, align 8
  %33 = load i32*, i32** %20, align 8
  %34 = load i32*, i32** %21, align 8
  %35 = load i8*, i8** %22, align 8
  %36 = load i8*, i8** %22, align 8
  %37 = icmp eq i8* %36, null
  %38 = zext i1 %37 to i64
  %39 = select i1 %37, i32 0, i32 1
  %40 = load i32*, i32** %23, align 8
  %41 = load i32, i32* %24, align 4
  %42 = load i8*, i8** %25, align 8
  %43 = load i8*, i8** %26, align 8
  %44 = call i32* @WpcCallEx2(i8* %27, i32* %28, i32 %29, i32 %30, i8* %31, i32* %32, i32* %33, i32* %34, i8* %35, i32 %39, i32* %40, i32 %41, i8* %42, i8* %43, i32* null)
  ret i32* %44
}

declare dso_local i32* @WpcCallEx2(i8*, i32*, i32, i32, i8*, i32*, i32*, i32*, i8*, i32, i32*, i32, i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
